@@ -1,0 +1,75 @@
+# stand-alone slapd config -- for backglue testing (with indexing)
+# $OpenLDAP$
+## This work is part of OpenLDAP Software <http://www.openldap.org/>.
+##
+## Copyright 1998-2011 The OpenLDAP Foundation.
+## All rights reserved.
+##
+## Redistribution and use in source and binary forms, with or without
+## modification, are permitted only as authorized by the OpenLDAP
+## Public License.
+##
+## A copy of this license is available in the file LICENSE in the
+## top-level directory of the distribution or, alternatively, at
+## <http://www.OpenLDAP.org/license.html>.
+
+include		@SCHEMADIR@/core.schema
+include		@SCHEMADIR@/cosine.schema
+include		@SCHEMADIR@/inetorgperson.schema
+include		@SCHEMADIR@/openldap.schema
+include		@SCHEMADIR@/nis.schema
+pidfile		@TESTDIR@/slapd.1.pid
+argsfile	@TESTDIR@/slapd.1.args
+
+#mod#modulepath	../servers/slapd/back-@BACKEND@/
+#mod#moduleload	back_@BACKEND@.la
+#monitormod#modulepath ../servers/slapd/back-monitor/
+#monitormod#moduleload back_monitor.la
+tool-threads 4
+#######################################################################
+# database definitions
+#######################################################################
+
+database	@BACKEND@
+suffix		"ou=Information Technology Division,ou=People,dc=example,dc=com"
+subordinate
+rootdn		"cn=Manager, dc=example,dc=com"
+#~null~#directory	@TESTDIR@/db.1.a
+#bdb#index		objectclass	eq
+#bdb#index		uid	pres,eq,sub
+#bdb#index		cn,sn	pres,eq,sub,subany
+#hdb#index		objectclass	eq
+#hdb#index		uid	pres,eq,sub
+#hdb#index		cn,sn	pres,eq,sub,subany
+#ndb#dbname db_1
+#ndb#include @DATADIR@/ndb.conf
+
+database	@BACKEND@
+suffix		"ou=Groups,dc=example,dc=com"
+subordinate
+rootdn		"cn=Manager, dc=example,dc=com"
+#~null~#directory	@TESTDIR@/db.1.b
+#bdb#index		objectclass	eq
+#bdb#index		uid	pres,eq,sub
+#bdb#index		cn,sn	pres,eq,sub,subany
+#hdb#index		objectclass	eq
+#hdb#index		uid	pres,eq,sub
+#hdb#index		cn,sn	pres,eq,sub,subany
+#ndb#dbname db_2
+#ndb#include @DATADIR@/ndb.conf
+
+database	@BACKEND@
+suffix		"dc=example,dc=com"
+rootdn		"cn=Manager, dc=example,dc=com"
+rootpw		secret
+#~null~#directory	@TESTDIR@/db.1.c
+#bdb#index		objectclass	eq
+#bdb#index		uid	pres,eq,sub
+#bdb#index		cn	pres,eq,sub,subany
+#hdb#index		objectclass	eq
+#hdb#index		uid	pres,eq,sub
+#hdb#index		cn	pres,eq,sub,subany
+#ndb#dbname db_3
+#ndb#include @DATADIR@/ndb.conf
+
+#monitor#database	monitor
